[gd_scene load_steps=12 format=3 uid="uid://cjgswb3r1xrh"]

[ext_resource type="Script" path="res://scripts/main.gd" id="1_blv6s"]
[ext_resource type="Texture2D" uid="uid://c37gusj5up284" path="res://sprites/background.png" id="1_i05hp"]
[ext_resource type="PackedScene" uid="uid://vncg0otqinlf" path="res://scenes/pipes.tscn" id="2_07gdn"]
[ext_resource type="PackedScene" uid="uid://b5bx7m7bks5gt" path="res://scenes/bird.tscn" id="4_ol2uu"]
[ext_resource type="Script" path="res://scripts/floor.gd" id="5_3lyc4"]
[ext_resource type="Texture2D" uid="uid://bsjhv4ji8bgqo" path="res://sprites/base.png" id="5_unn7g"]
[ext_resource type="AudioStream" uid="uid://dytmgwk1ycuwi" path="res://audio/die.wav" id="7_6tj8l"]
[ext_resource type="AudioStream" uid="uid://ckfa7mw7c37ot" path="res://audio/hit.wav" id="8_vgowg"]
[ext_resource type="AudioStream" uid="uid://xqkabw4gqg3a" path="res://audio/point.wav" id="9_3ueyd"]
[ext_resource type="PackedScene" uid="uid://byiwoiutm7uh" path="res://scenes/counter.tscn" id="10_45rla"]

[sub_resource type="WorldBoundaryShape2D" id="WorldBoundaryShape2D_83nvc"]

[node name="Main" type="Node2D" node_paths=PackedStringArray("pipe_timer")]
script = ExtResource("1_blv6s")
pipe_timer = NodePath("PipeTimer")
pipe_scene = ExtResource("2_07gdn")
height_variance = 100

[node name="Background" type="Sprite2D" parent="."]
texture = ExtResource("1_i05hp")
offset = Vector2(144, 256)

[node name="Bird" parent="." instance=ExtResource("4_ol2uu")]
z_index = 1
position = Vector2(55, 200)

[node name="Floor" type="Area2D" parent="."]
z_index = 2
position = Vector2(168, 456)
script = ExtResource("5_3lyc4")

[node name="Sprite2D" type="Sprite2D" parent="Floor"]
texture = ExtResource("5_unn7g")

[node name="CollisionShape2D" type="CollisionShape2D" parent="Floor"]
position = Vector2(0, -55)
shape = SubResource("WorldBoundaryShape2D_83nvc")
metadata/_edit_lock_ = true

[node name="StaticBody2D" type="StaticBody2D" parent="Floor"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Floor/StaticBody2D"]
position = Vector2(0, -54.5)
shape = SubResource("WorldBoundaryShape2D_83nvc")
metadata/_edit_lock_ = true

[node name="PipeTimer" type="Timer" parent="."]
wait_time = 1.5

[node name="DieSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource("7_6tj8l")

[node name="HitSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource("8_vgowg")

[node name="ScoreSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource("9_3ueyd")

[node name="Counter" parent="." instance=ExtResource("10_45rla")]
z_index = 3
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = 107.0
offset_top = 50.0
offset_right = 181.0
offset_bottom = 86.0
grow_horizontal = 2

[node name="RestartLabel" type="Label" parent="."]
z_index = 10
offset_left = 68.0
offset_top = 276.0
offset_right = 219.0
offset_bottom = 299.0
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/shadow_offset_x = 2
theme_override_constants/shadow_offset_y = 2
theme_override_constants/outline_size = 5
theme_override_constants/shadow_outline_size = 1
text = "Press \"R\" to Restart"

[connection signal="body_entered" from="Floor" to="Floor" method="_on_body_entered"]
[connection signal="hit" from="Floor" to="." method="_on_floor_hit"]
[connection signal="timeout" from="PipeTimer" to="." method="_on_pipe_timer_timeout"]
